@@ -101,6 +101,8 @@ class CHtml
 	 * Generates an HTML element.
 	 * @param string the tag name
 	 * @param array the element attributes. The values will be HTML-encoded using {@link encode()}.
+	 * Since version 1.0.5, if an 'encode' attribute is given and its value is false,
+	 * the rest of the attribute values will NOT be HTML-encoded.
 	 * @param mixed the content to be enclosed between open and close element tags. It will not be HTML-encoded.
 	 * If false, it means there is no body content.
 	 * @param boolean whether to generate the close tag.
@@ -108,9 +110,7 @@ class CHtml
 	 */
 	public static function tag($tag,$htmlOptions=array(),$content=false,$closeTag=true)
 	{
-		$html='<' . $tag;
-		foreach($htmlOptions as $name=>$value)
-			$html .= ' ' . $name . '="' . self::encode($value) . '"';
+		$html='<' . $tag . self::renderAttributes($htmlOptions);
 		if($content===false)
 			return $closeTag ? $html.' />' : $html.'>';
 		else
@@ -121,14 +121,13 @@ class CHtml
 	 * Generates an open HTML element.
 	 * @param string the tag name
 	 * @param array the element attributes. The values will be HTML-encoded using {@link encode()}.
+	 * Since version 1.0.5, if an 'encode' attribute is given and its value is false,
+	 * the rest of the attribute values will NOT be HTML-encoded.
 	 * @return string the generated HTML element tag
 	 */
 	public static function openTag($tag,$htmlOptions=array())
 	{
-		$html='<' . $tag;
-		foreach($htmlOptions as $name=>$value)
-			$html .= ' ' . $name . '="' . self::encode($value) . '"';
-		return $html . '>';
+		return '<' . $tag . self::renderAttributes($htmlOptions) . '>';
 	}
 
 	/**
@@ -245,7 +244,7 @@ class CHtml
 	 * This is a shortcut to {@link beginForm}.
 	 * @param mixed the form action URL (see {@link normalizeUrl} for details about this parameter.)
 	 * @param string form method (e.g. post, get)
-	 * @param array additional HTML attributes.
+	 * @param array additional HTML attributes (see {@link tag}).
 	 * @return string the generated form tag.
 	 */
 	public static function form($action='',$method='post',$htmlOptions=array())
@@ -259,7 +258,7 @@ class CHtml
 	 * at the end of the form.
 	 * @param mixed the form action URL (see {@link normalizeUrl} for details about this parameter.)
 	 * @param string form method (e.g. post, get)
-	 * @param array additional HTML attributes.
+	 * @param array additional HTML attributes (see {@link tag}).
 	 * @return string the generated form tag.
 	 * @since 1.0.4
 	 * @see endForm
@@ -296,7 +295,7 @@ class CHtml
 	 * a form tag if you want to access persistent page states when the form is submitted.
 	 * @param mixed the form action URL (see {@link normalizeUrl} for details about this parameter.)
 	 * @param string form method (e.g. post, get)
-	 * @param array additional HTML attributes.
+	 * @param array additional HTML attributes (see {@link tag}).
 	 * @return string the generated form tag.
 	 */
 	public static function statefulForm($action='',$method='post',$htmlOptions=array())
@@ -321,7 +320,7 @@ class CHtml
 	 * @param mixed a URL or an action route that can be used to create a URL.
 	 * See {@link normalizeUrl} for more details about how to specify this parameter.
 	 * @param array additional HTML attributes. Besides normal HTML attributes, a few special
-	 * attributes are also recognized (see {@link clientChange} for more details.)
+	 * attributes are also recognized (see {@link clientChange} and {@link tag} for more details.)
 	 * @return string the generated hyperlink
 	 * @see normalizeUrl
 	 * @see clientChange
@@ -339,7 +338,7 @@ class CHtml
 	 * @param string link body. It will NOT be HTML-encoded. Therefore you can pass in HTML code such as an image tag.
 	 * @param string email address. If this is empty, the first parameter (link body) will be treated as the email address.
 	 * @param array additional HTML attributes. Besides normal HTML attributes, a few special
-	 * attributes are also recognized (see {@link clientChange} for more details.)
+	 * attributes are also recognized (see {@link clientChange} and {@link tag} for more details.)
 	 * @return string the generated mailto link
 	 * @see clientChange
 	 * @since 1.0.1
@@ -355,7 +354,7 @@ class CHtml
 	 * Generates an image tag.
 	 * @param string the image URL
 	 * @param string the alternative text display
-	 * @param array additional HTML attributes.
+	 * @param array additional HTML attributes (see {@link tag}).
 	 * @return string the generated image tag
 	 */
 	public static function image($src,$alt='',$htmlOptions=array())
@@ -369,7 +368,7 @@ class CHtml
 	 * Generates a button.
 	 * @param string the button label
 	 * @param array additional HTML attributes. Besides normal HTML attributes, a few special
-	 * attributes are also recognized (see {@link clientChange} for more details.)
+	 * attributes are also recognized (see {@link clientChange} and {@link tag} for more details.)
 	 * @return string the generated button tag
 	 * @see clientChange
 	 */
@@ -389,7 +388,7 @@ class CHtml
 	 * Generates a submit button.
 	 * @param string the button label
 	 * @param array additional HTML attributes. Besides normal HTML attributes, a few special
-	 * attributes are also recognized (see {@link clientChange} for more details.)
+	 * attributes are also recognized (see {@link clientChange} and {@link tag} for more details.)
 	 * @return string the generated button tag
 	 * @see clientChange
 	 */
@@ -403,7 +402,7 @@ class CHtml
 	 * Generates a reset button.
 	 * @param string the button label
 	 * @param array additional HTML attributes. Besides normal HTML attributes, a few special
-	 * attributes are also recognized (see {@link clientChange} for more details.)
+	 * attributes are also recognized (see {@link clientChange} and {@link tag} for more details.)
 	 * @return string the generated button tag
 	 * @see clientChange
 	 */
@@ -417,7 +416,7 @@ class CHtml
 	 * Generates an image submit button.
 	 * @param string the button label
 	 * @param array additional HTML attributes. Besides normal HTML attributes, a few special
-	 * attributes are also recognized (see {@link clientChange} for more details.)
+	 * attributes are also recognized (see {@link clientChange} and {@link tag} for more details.)
 	 * @return string the generated button tag
 	 * @see clientChange
 	 */
@@ -432,7 +431,7 @@ class CHtml
 	 * Generates a link submit button.
 	 * @param string the button label
 	 * @param array additional HTML attributes. Besides normal HTML attributes, a few special
-	 * attributes are also recognized (see {@link clientChange} for more details.)
+	 * attributes are also recognized (see {@link clientChange} and {@link tag} for more details.)
 	 * @return string the generated button tag
 	 * @see clientChange
 	 */
@@ -480,7 +479,7 @@ class CHtml
 	 * @param string the input name
 	 * @param string the input value
 	 * @param array additional HTML attributes. Besides normal HTML attributes, a few special
-	 * attributes are also recognized (see {@link clientChange} for more details.)
+	 * attributes are also recognized (see {@link clientChange} and {@link tag} for more details.)
 	 * @return string the generated input field
 	 * @see clientChange
 	 * @see inputField
@@ -495,7 +494,7 @@ class CHtml
 	 * Generates a hidden input.
 	 * @param string the input name
 	 * @param string the input value
-	 * @param array additional HTML attributes.
+	 * @param array additional HTML attributes (see {@link tag}).
 	 * @return string the generated input field
 	 * @see inputField
 	 */
@@ -509,7 +508,7 @@ class CHtml
 	 * @param string the input name
 	 * @param string the input value
 	 * @param array additional HTML attributes. Besides normal HTML attributes, a few special
-	 * attributes are also recognized (see {@link clientChange} for more details.)
+	 * attributes are also recognized (see {@link clientChange} and {@link tag} for more details.)
 	 * @return string the generated input field
 	 * @see clientChange
 	 * @see inputField
@@ -527,7 +526,7 @@ class CHtml
 	 * PHP documentation).
 	 * @param string the input name
 	 * @param string the input value
-	 * @param array additional HTML attributes.
+	 * @param array additional HTML attributes (see {@link tag}).
 	 * @return string the generated input field
 	 * @see inputField
 	 */
@@ -541,7 +540,7 @@ class CHtml
 	 * @param string the input name
 	 * @param string the input value
 	 * @param array additional HTML attributes. Besides normal HTML attributes, a few special
-	 * attributes are also recognized (see {@link clientChange} for more details.)
+	 * attributes are also recognized (see {@link clientChange} and {@link tag} for more details.)
 	 * @return string the generated text area
 	 * @see clientChange
 	 * @see inputField
@@ -560,7 +559,7 @@ class CHtml
 	 * @param string the input name
 	 * @param boolean whether the check box is checked
 	 * @param array additional HTML attributes. Besides normal HTML attributes, a few special
-	 * attributes are also recognized (see {@link clientChange} for more details.)
+	 * attributes are also recognized (see {@link clientChange} and {@link tag} for more details.)
 	 * @return string the generated radio button
 	 * @see clientChange
 	 * @see inputField
@@ -581,7 +580,7 @@ class CHtml
 	 * @param string the input name
 	 * @param boolean whether the check box is checked
 	 * @param array additional HTML attributes. Besides normal HTML attributes, a few special
-	 * attributes are also recognized (see {@link clientChange} for more details.)
+	 * attributes are also recognized (see {@link clientChange} and {@link tag} for more details.)
 	 * @return string the generated check box
 	 * @see clientChange
 	 * @see inputField
@@ -606,8 +605,8 @@ class CHtml
 	 * Please refer to {@link listOptions} on how this data is used to generate the list options.
 	 * Note, the values and labels will be automatically HTML-encoded by this method.
 	 * @param array additional HTML attributes. Besides normal HTML attributes, a few special
-	 * attributes are recognized. See {@link clientChange} for more details.
-	 * In addition, the following options are also supported:
+	 * attributes are recognized. See {@link clientChange} and {@link tag} for more details.
+	 * In addition, the following options are also supported specifically for dropdown list:
 	 * <ul>
 	 * <li>prompt: string, specifies the prompt text shown as the first list option. Its value is empty.</li>
 	 * <li>empty: string, specifies the text corresponding to empty selection. Its value is empty.</li>
@@ -647,8 +646,8 @@ class CHtml
 	 * Please refer to {@link listOptions} on how this data is used to generate the list options.
 	 * Note, the values and labels will be automatically HTML-encoded by this method.
 	 * @param array additional HTML attributes. Besides normal HTML attributes, a few special
-	 * attributes are also recognized. See {@link clientChange} for more details.
-	 * In addition, the following options are also supported:
+	 * attributes are also recognized. See {@link clientChange} and {@link tag} for more details.
+	 * In addition, the following options are also supported specifically for list box:
 	 * <ul>
 	 * <li>prompt: string, specifies the prompt text shown as the first list option. Its value is empty.</li>
 	 * <li>empty: string, specifies the text corresponding to empty selection. Its value is empty.</li>
@@ -819,7 +818,7 @@ EOD;
 	 * @param mixed the URL for the AJAX request. If empty, it is assumed to be the current URL. See {@link normalizeUrl} for more details.
 	 * @param array AJAX options (see {@link ajax})
 	 * @param array additional HTML attributes. Besides normal HTML attributes, a few special
-	 * attributes are also recognized (see {@link clientChange} for more details.)
+	 * attributes are also recognized (see {@link clientChange} and {@link tag} for more details.)
 	 * @return string the generated link
 	 * @see normalizeUrl
 	 * @see ajax
@@ -840,7 +839,7 @@ EOD;
 	 * @param mixed the URL for the AJAX request. If empty, it is assumed to be the current URL. See {@link normalizeUrl} for more details.
 	 * @param array AJAX options (see {@link ajax})
 	 * @param array additional HTML attributes. Besides normal HTML attributes, a few special
-	 * attributes are also recognized (see {@link clientChange} for more details.)
+	 * attributes are also recognized (see {@link clientChange} and {@link tag} for more details.)
 	 * @return string the generated button
 	 */
 	public static function ajaxButton($label,$url,$ajaxOptions=array(),$htmlOptions=array())
@@ -856,7 +855,7 @@ EOD;
 	 * @param mixed the URL for the AJAX request. If empty, it is assumed to be the current URL. See {@link normalizeUrl} for more details.
 	 * @param array AJAX options (see {@link ajax})
 	 * @param array additional HTML attributes. Besides normal HTML attributes, a few special
-	 * attributes are also recognized (see {@link clientChange} for more details.)
+	 * attributes are also recognized (see {@link clientChange} and {@link tag} for more details.)
 	 * @return string the generated button
 	 */
 	public static function ajaxSubmitButton($label,$url,$ajaxOptions=array(),$htmlOptions=array())
@@ -955,7 +954,7 @@ EOD;
 	 * @param string the input type (e.g. 'text', 'radio')
 	 * @param string the input name
 	 * @param string the input value
-	 * @param array additional HTML attributes for the HTML tag
+	 * @param array additional HTML attributes for the HTML tag (see {@link tag}).
 	 * @return string the generated input tag
 	 */
 	protected static function inputField($type,$name,$value,$htmlOptions)
@@ -1028,7 +1027,7 @@ EOD;
 	 * @param CModel the data model
 	 * @param string the attribute
 	 * @param array additional HTML attributes. Besides normal HTML attributes, a few special
-	 * attributes are also recognized (see {@link clientChange} for more details.)
+	 * attributes are also recognized (see {@link clientChange} and {@link tag} for more details.)
 	 * @return string the generated input field
 	 * @see clientChange
 	 * @see activeInputField
@@ -1061,7 +1060,7 @@ EOD;
 	 * @param CModel the data model
 	 * @param string the attribute
 	 * @param array additional HTML attributes. Besides normal HTML attributes, a few special
-	 * attributes are also recognized (see {@link clientChange} for more details.)
+	 * attributes are also recognized (see {@link clientChange} and {@link tag} for more details.)
 	 * @return string the generated input field
 	 * @see clientChange
 	 * @see activeInputField
@@ -1080,7 +1079,7 @@ EOD;
 	 * @param CModel the data model
 	 * @param string the attribute
 	 * @param array additional HTML attributes. Besides normal HTML attributes, a few special
-	 * attributes are also recognized (see {@link clientChange} for more details.)
+	 * attributes are also recognized (see {@link clientChange} and {@link tag} for more details.)
 	 * @return string the generated text area
 	 * @see clientChange
 	 */
@@ -1100,7 +1099,7 @@ EOD;
 	 * PHP documentation).
 	 * @param CModel the data model
 	 * @param string the attribute
-	 * @param array additional HTML attributes.
+	 * @param array additional HTML attributes (see {@link tag}).
 	 * @return string the generated input field
 	 * @see activeInputField
 	 */
@@ -1120,7 +1119,7 @@ EOD;
 	 * @param CModel the data model
 	 * @param string the attribute
 	 * @param array additional HTML attributes. Besides normal HTML attributes, a few special
-	 * attributes are also recognized (see {@link clientChange} for more details.)
+	 * attributes are also recognized (see {@link clientChange} and {@link tag} for more details.)
 	 * @return string the generated radio button
 	 * @see clientChange
 	 * @see activeInputField
@@ -1146,7 +1145,7 @@ EOD;
 	 * @param CModel the data model
 	 * @param string the attribute
 	 * @param array additional HTML attributes. Besides normal HTML attributes, a few special
-	 * attributes are also recognized (see {@link clientChange} for more details.)
+	 * attributes are also recognized (see {@link clientChange} and {@link tag} for more details.)
 	 * Since version 1.0.2, a special option named 'uncheckValue' is available that can be used to specify
 	 * the value returned when the checkbox is not checked. By default, this value is '0'.
 	 * @return string the generated check box
@@ -1185,7 +1184,7 @@ EOD;
 	 * Please refer to {@link listOptions} on how this data is used to generate the list options.
 	 * Note, the values and labels will be automatically HTML-encoded by this method.
 	 * @param array additional HTML attributes. Besides normal HTML attributes, a few special
-	 * attributes are recognized. See {@link clientChange} for more details.
+	 * attributes are recognized. See {@link clientChange} and {@link tag} for more details.
 	 * In addition, the following options are also supported:
 	 * <ul>
 	 * <li>prompt: string, specifies the prompt text shown as the first list option. Its value is empty.</li>
@@ -1234,7 +1233,7 @@ EOD;
 	 * Please refer to {@link listOptions} on how this data is used to generate the list options.
 	 * Note, the values and labels will be automatically HTML-encoded by this method.
 	 * @param array additional HTML attributes. Besides normal HTML attributes, a few special
-	 * attributes are recognized. See {@link clientChange} for more details.
+	 * attributes are recognized. See {@link clientChange} and {@link tag} for more details.
 	 * In addition, the following options are also supported:
 	 * <ul>
 	 * <li>prompt: string, specifies the prompt text shown as the first list option. Its value is empty.</li>
@@ -1506,6 +1505,7 @@ EOD;
 	 * @param array the option data (see {@link listData})
 	 * @param array additional HTML attributes. The following two special attributes are recognized:
 	 * <ul>
+	 * <li>encode: boolean, specifies whether to encode the values. Defaults to true. This option has been available since version 1.0.5.</li>
 	 * <li>prompt: string, specifies the prompt text shown as the first list option. Its value is empty.</li>
 	 * <li>empty: string, specifies the text corresponding to empty selection. Its value is empty.</li>
 	 * <li>options: array, specifies additional attributes for each OPTION tag.
@@ -1524,15 +1524,16 @@ EOD;
 	 */
 	public static function listOptions($selection,$listData,&$htmlOptions)
 	{
+		$raw=isset($htmlOptions['encode']) && !$htmlOptions['encode'];
 		$content='';
 		if(isset($htmlOptions['prompt']))
 		{
-			$content.='<option value="">'.self::encode($htmlOptions['prompt'])."</option>\n";
+			$content.='<option value="">'.($raw?$htmlOptions['prompt'] : self::encode($htmlOptions['prompt']))."</option>\n";
 			unset($htmlOptions['prompt']);
 		}
 		if(isset($htmlOptions['empty']))
 		{
-			$content.='<option value="">'.self::encode($htmlOptions['empty'])."</option>\n";
+			$content.='<option value="">'.($raw?$htmlOptions['empty'] : self::encode($htmlOptions['empty']))."</option>\n";
 			unset($htmlOptions['empty']);
 		}
 
@@ -1548,19 +1549,19 @@ EOD;
 		{
 			if(is_array($value))
 			{
-				$content.='<optgroup label="'.self::encode($key)."\">\n";
+				$content.='<optgroup label="'.($raw?$key : self::encode($key))."\">\n";
 				$dummy=array();
 				$content.=self::listOptions($selection,$value,$dummy);
 				$content.='</optgroup>'."\n";
 			}
 			else
 			{
-				$attributes=array('value'=>(string)$key);
+				$attributes=array('value'=>(string)$key, 'encode'=>!$raw);
 				if(!is_array($selection) && !strcmp($key,$selection) || is_array($selection) && in_array($key,$selection))
 					$attributes['selected']='selected';
 				if(isset($options[$key]))
 					$attributes=array_merge($attributes,$options[$key]);
-				$content.=CHtml::tag('option',$attributes,self::encode((string)$value))."\n";
+				$content.=self::tag('option',$attributes,$raw?(string)$value : self::encode((string)$value))."\n";
 			}
 		}
 		return $content;
@@ -1681,5 +1682,31 @@ EOD;
 			$htmlOptions['class'].=' '.self::$errorCss;
 		else
 			$htmlOptions['class']=self::$errorCss;
+	}
+
+	/**
+	 * Renders the HTML tag attributes.
+	 * @param array attributes to be rendered
+	 * @return string the rendering result
+	 * @since 1.0.5
+	 */
+	protected static function renderAttributes($htmlOptions)
+	{
+		if($htmlOptions===array())
+			return '';
+		$html='';
+		$raw=isset($htmlOptions['encode']) && !$htmlOptions['encode'];
+		unset($htmlOptions['encode']);
+		if($raw)
+		{
+			foreach($htmlOptions as $name=>$value)
+				$html .= ' ' . $name . '="' . $value . '"';
+		}
+		else
+		{
+			foreach($htmlOptions as $name=>$value)
+				$html .= ' ' . $name . '="' . self::encode($value) . '"';
+		}
+		return $html;
 	}
 }
